# trowel

./: LICENSE  README.md  bun.lockb  docker-compose.yml  package-lock.json  package.json  tsconfig.json
apps/backend/: .gitignore  package.json
apps/backend/src/: globals.ts  index.ts
apps/backend/src/clients/: discogs.ts  embedder.ts  index.ts  rest.ts  server.ts
apps/backend/src/queues/: discogs.ts  embedder.ts  embedding.ts  index.ts  search.ts  similarity.ts
apps/backend/src/services/: server.ts
apps/backend/src/utils/: common.ts
apps/frontend/: package.json  vite.config.ts
apps/frontend/src/: App.tsx  Dig.tsx  main.tsx
apps/frontend/src/api/: client.ts
apps/frontend/src/components/ui/: input.tsx
apps/python-server/: dl.py  main.py  model.py  pyproject.toml
apps/server/: embedder.py  io_models.py  main.py  model.py  models.py  pyproject.toml  test.py
apps/server/tmp/: 5rIISEtYi0o.f234.mp4.part  5rIISEtYi0o.f234.mp4.ytdl  vNMM0Fi_iSM.f234.mp4.part  vNMM0Fi_iSM.f234.mp4.part-Frag10.part
